--- a/assets/head.html
+++ b/assets/head.html
@@ -3,4 +3,75 @@
     overflow: hidden;
     margin: 0;
   }
+
+  *[class*=language] {
+    border: 0.0625em solid var(--input-border);
+    background: var(--input-color);
+    color: var(--input-text);
+    padding: 0.5em 0.75em;
+    border-radius: 0.25em;
+    overflow-x: auto;
+    display: block;
+  }
+
+  .hljs-comment,
+  .hljs-quote {
+    opacity: 0.75;
+  }
+
+  .hljs-doctag,
+  .hljs-formula,
+  .hljs-keyword {
+    color: DeepSkyBlue;
+  }
+
+  .hljs-deletion,
+  .hljs-name,
+  .hljs-section,
+  .hljs-selector-tag,
+  .hljs-subst {
+  }
+
+  .hljs-addition,
+  .hljs-attribute,
+  .hljs-meta .hljs-string,
+  .hljs-regexp,
+  .hljs-string {
+    color: LimeGreen;
+  }
+
+  .hljs-literal,
+  .hljs-attr,
+  .hljs-number,
+  .hljs-selector-attr,
+  .hljs-selector-class,
+  .hljs-selector-pseudo,
+  .hljs-template-variable,
+  .hljs-type,
+  .hljs-variable {
+    color: Orange;
+  }
+  .hljs-bullet,
+  .hljs-link,
+  .hljs-meta,
+  .hljs-selector-id,
+  .hljs-symbol,
+  .hljs-title {
+    color: #61aeee;
+  }
+  .hljs-built_in,
+  .hljs-class .hljs-title,
+  .hljs-title.class_ {
+    color: #e6c07b;
+  }
+  .hljs-emphasis {
+    font-style: italic;
+  }
+  .hljs-strong {
+    font-weight: 700;
+  }
+  .hljs-link {
+    text-decoration: underline;
+  }
+
 </style>
